added primary and secondary color as alias so a user can change it to his preferences. Fixed some bugs within the datepicker generation. cleaned up some code. changed style of datepicker.

--- a/apps/ng-datepicker-demo/src/app/app.component.html
+++ b/apps/ng-datepicker-demo/src/app/app.component.html
@@ -1,2 +1,7 @@
 <h1>Lebt</h1>
-<yatafu-datepicker-tailwind></yatafu-datepicker-tailwind>
+<yatafu-datepicker-tailwind
+  [value]="date"
+  [disableFutureDays]="true"
+  formInputId="to"
+  formInputLabel="Bis"
+></yatafu-datepicker-tailwind>
