--- a/libs/datepicker/src/lib/datepicker-tailwind/datepicker-tailwind.component.html
+++ b/libs/datepicker/src/lib/datepicker-tailwind/datepicker-tailwind.component.html
@@ -2,26 +2,26 @@
   <div class="antialiased sans-serif">
     <div>
       <div class="container">
-        <div class="w-64">
+        <div class="w-full">
           <label
             for="datepicker"
-            class="font-normal text-md mb-0.5 text-gray-700"
-            >{{ label }}</label
+            class="font-normal text-sm mb-0.5 text-dpsecondary-700"
+            >{{ formInputLabel }}</label
           >
           <div class="relative">
             <input
-              id="{{ id }}"
+              id="{{ formInputId }}"
               type="text"
               (click)="showDatepicker = !showDatepicker"
               (keydown.escape)="showDatepicker = false"
               value="{{ value | date : 'mediumDate' : undefined : userLocale }}"
-              class="w-full pl-4 pr-10 py-3 leading-none rounded-lg shadow-sm focus:outline-none focus:shadow-outline text-gray-600 font-medium"
+              class="w-full pl-4 pr-10 py-3 leading-none rounded-lg shadow-sm focus:outline-none focus:shadow-outline text-dpsecondary-600 font-medium"
               placeholder="Select date"
             />
 
             <div class="absolute top-0 right-0 px-3 py-2">
               <svg
-                class="h-6 w-6 text-gray-400"
+                class="h-6 w-6 text-dpsecondary-400"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke="currentColor"
@@ -35,28 +35,27 @@
               </svg>
             </div>
             <div
-              class="bg-white mt-12 rounded-lg shadow p-4 absolute top-0 left-0"
-              style="width: 17rem"
+              class="bg-white rounded-lg shadow p-4 w-full absolute top-12 left-0"
               [hidden]="!showDatepicker"
-              (keydown.away)="showDatepicker = false"
+              (blur)="showDatepicker = false"
             >
               <div class="flex justify-between items-center mb-2">
                 <div>
-                  <span class="text-lg font-bold text-gray-800">{{
+                  <span class="text-lg font-bold text-dpsecondary-800">{{
                     getMonthName()
                   }}</span>
-                  <span class="ml-1 text-lg text-gray-600 font-normal">{{
+                  <span class="ml-1 text-lg text-dpsecondary-600 font-normal">{{
                     year
                   }}</span>
                 </div>
                 <div>
                   <button
                     type="button"
-                    class="transition ease-in-out duration-100 inline-flex cursor-pointer hover:bg-gray-200 p-1 rounded-full"
+                    class="transition ease-in-out duration-100 inline-flex cursor-pointer hover:bg-dpsecondary-200 p-1 rounded-full"
                     (click)="decreaseMonth(); updateCalendarEntries()"
                   >
                     <svg
-                      class="h-6 w-6 text-gray-500 inline-flex"
+                      class="h-6 w-6 text-dpsecondary-500 inline-flex"
                       fill="none"
                       viewBox="0 0 24 24"
                       stroke="currentColor"
@@ -71,11 +70,11 @@
                   </button>
                   <button
                     type="button"
-                    class="transition ease-in-out duration-100 inline-flex cursor-pointer hover:bg-gray-200 p-1 rounded-full"
+                    class="transition ease-in-out duration-100 inline-flex cursor-pointer hover:bg-dpsecondary-200 p-1 rounded-full"
                     (click)="increaseMonth(); updateCalendarEntries()"
                   >
                     <svg
-                      class="h-6 w-6 text-gray-500 inline-flex"
+                      class="h-6 w-6 text-dpsecondary-500 inline-flex"
                       fill="none"
                       viewBox="0 0 24 24"
                       stroke="currentColor"
@@ -91,48 +90,26 @@
                 </div>
               </div>
 
-              <div class="flex flex-wrap mb-3 -mx-1">
-                <ng-container *ngFor="let day of DAYS; let index = index">
-                  <div style="width: 14.26%" class="px-1">
-                    <div class="text-gray-800 font-medium text-center text-xs">
-                      {{ day }}
-                    </div>
-                  </div>
-                </ng-container>
-              </div>
-
-              <div class="flex flex-wrap -mx-1">
-                <ng-container *ngFor="let preMonthDay of preMonthDays">
-                  <div
-                    style="width: 14.28%"
-                    class="text-center border-none p-1 border-transparent text-blue-500 opacity-60 text-sm"
-                  >
-                    {{ preMonthDay | date : 'dd' }}
-                  </div>
-                </ng-container>
+              <div class="grid grid-cols-7 gap-1 align-middle">
                 <ng-container
-                  *ngFor="
-                    let day of daysOfMonth;
-                    let dateIndex = index;
-                    trackBy: trackByIdentity
-                  "
+                  *ngFor="let item of [].constructor(7); let i = index"
                 >
-                  <div style="width: 14.28%" class="px-1 mb-1">
-                    <div
-                      (click)="setDateValue(day)"
-                      class="cursor-pointer text-center text-sm rounded-full leading-loose transition ease-in-out| duration-100"
-                      [ngClass]="getClassForDay(day)"
-                    >
-                      {{ day | date : 'dd' }}
-                    </div>
+                  <div
+                    class="text-dpsecondary-800 font-medium text-center text-xs"
+                  >
+                    {{ getDayName(i) }}
                   </div>
                 </ng-container>
-                <ng-container *ngFor="let postMonthDay of postMonthDays">
+
+                <ng-container
+                  *ngFor="let day of daysOfMonth; let dateIndex = index"
+                >
                   <div
-                    style="width: 14.28%"
-                    class="text-center border-none p-1 border-transparent text-blue-500 opacity-60 text-sm"
+                    (click)="setDateValue(day)"
+                    class="text-center text-sm rounded-full h-7 w-7 p-1 transition ease-in-out| duration-100"
+                    [ngClass]="getClassForDay(day)"
                   >
-                    {{ postMonthDay | date : 'dd' }}
+                    {{ day | date : 'dd' : undefined : userLocale }}
                   </div>
                 </ng-container>
               </div>
