--- a/apps/ng-datepicker-demo/src/app/app.component.html
+++ b/apps/ng-datepicker-demo/src/app/app.component.html
@@ -1,6 +1,7 @@
-<lib-yatafu-datepicker-tw
-  [selectedDate]="date"
-  [disableFutureDays]="true"
-  [formInput]="{ label: 'Label', id: 'Id' }"
-  class="mt-4"
-></lib-yatafu-datepicker-tw>
+<div class="mt-4 w-72 m-auto">
+  <lib-yatafu-datepicker-tw
+    [selectedDate]="date"
+    [disableFutureDays]="true"
+    [formInput]="{ label: 'Label', id: 'Id' }"
+  ></lib-yatafu-datepicker-tw>
+</div>
